--- a/navtitle.html
+++ b/navtitle.html
@@ -9,13 +9,13 @@
 
 	<body>
 		<div class="menu">
-			<ul class="menu-nav">
+			<ul>
 				<li>
 					<a href="#1">首页 </a>
 				</li>
 				<li>
-					<a href="" >宝安区</a>
-					<ul class="menu-list">
+					<a href="" >宝安区</a><span ></span>
+					<ul>
 						<li>
 							<a href="" >沙井</a>
 						</li>
@@ -23,7 +23,7 @@
 							<a href="" >西乡</a>
 						</li>
 						<li>
-							<a href="" 松岗</a>
+							<a href="">松岗</a>
 						</li>
 						<li>
 							<a href="" >石岩</a>
@@ -35,7 +35,7 @@
 				</li>
 				<li>
 					<a href="#2">龙华新区</a>
-					<ul class="menu-list">
+					<ul>
 						<li>
 							<a href="" >清湖</a>
 						</li>
@@ -58,7 +58,7 @@
 				</li>
 				<li>
 					<a href="#3">龙岗区</a>
-					<ul class="menu-list">
+					<ul >
 						<li>
 							<a href="">平湖</a>
 						</li>
@@ -75,7 +75,7 @@
 				</li>
 				<li>
 					<a href="#4">光明新区</a>
-					<ul class="menu-list">
+					<ul >
 						<li>
 							<a href="" >公明</a>
 						</li>
@@ -86,7 +86,7 @@
 				</li>
 				<li>
 					<a href="#5">深圳关内</a>
-					<ul class="menu-list">
+					<ul >
 						<li>
 							<a href="" >南山</a>
 						</li>
@@ -103,7 +103,7 @@
 				</li>
 				<li>
 					<a href="#6">东莞小产权</a>
-					<ul class="menu-list">
+					<ul >
 						<li>
 							<a href="" >塘厦</a>
 						</li>
@@ -141,6 +141,31 @@
 				</li>
 			</ul>
 		</div>
-	</body>
+		<div class="content">
+			<div style="margin-left: 30%;padding-top: 10%;">
+				<p>我那么努力，就是为了有一个安稳的家，100%真房源</p>
+				<div style="padding-top: 20px; 0">
+				<input type="text" value="" placeholder="请输入关键字..." style="width：800px;height: 50px;border: 0px; "/>
+				<buttom style="background:rgb(0,153,255) ;width: 100px;height: 100px;border: 1px solid rgb(0,153,255);">搜索</buttom>						
+				</div>
+				<div >
+					<ul class="ardess">
+						<li><a href="">沙井</a></li>
+						<li><a href="">石岩</a></li>
+						<li><a href="">松岗</a></li>
+						<li><a href="">福永</a></li>
+						<li><a href="">龙华</a></li>
+						<li><a href="">民治</a></li>
+						<li><a href="">大浪</a></li>
+						<li><a href="">龙岗</a></li>
+						<li><a href="">深吉</a></li>
+						<li><a href="">坂田</a></li>
+						<li><a href="">公明</a></li>
+						<li><a href="">光明</a></li>
+					</ul>
+				</div>
 
+			</div>
+		</div>
+	</body>
 </html>
